@@ -16,5 +16,5 @@ You should have received a copy of the GNU General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 """
 
-VERSION = '0.22'
-SO_VERSION = '0'
+VERSION = '0.23'
+SO_VERSION = '1'
